# config

./: .editorconfig  .gitignore  config.py  pyproject.toml
incolumepy/config/: __init__.py
settings/: config.toml
